Closed
Bug 1373335
Opened 8 years ago
Closed 8 years ago
Top border of Find Toolbar & Web Console blinking/flashing/flickering on black on scrolling
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox-esr45 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | + | verified |
People
(Reporter: Virtual, Assigned: mattwoodrow)
References
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
STR:
1. Open some long website page to get scrollbar
2. Scroll with it or use mouse scroll button
3. See that top border of Find Toolbar blinking/flashing/flickering on black on scrolling
| Reporter | ||
Updated•8 years ago
|
Has STR: --- → yes
Comment 1•8 years ago
|
||
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7c4ca88d519f1f4a1ea4938cbba047e89d3ff3ec&tochange=45fde181a497a187d01d5412f5b72897c7520517
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=958d2a5d10091401fd5e900e8e063d21940c137e&tochange=7f894f791cdf170d788507d0eff30024ce699523
Regressed by: Bug 1359709 , Bug 1361970
Comment 2•8 years ago
|
||
I can also see the border blinking when scroll web content if Web Console(Ctrl+Shift+K) is opened
Component: Find Toolbar → Graphics: Layers
Product: Toolkit → Core
Updated•8 years ago
|
Has Regression Range: --- → yes
Keywords: regressionwindow-wanted
| Reporter | ||
Comment 3•8 years ago
|
||
Thank you very much Alice0775 White for finding specific regression range!
For Web Console, the issue is most visible when it's in "Light" or "Firebug" theme.
Summary: Top border of Find Toolbar blinking/flashing/flickering on black on scrolling → Top border of Find Toolbar & Web Console blinking/flashing/flickering on black on scrolling
| Reporter | ||
Comment 5•8 years ago
|
||
[Tracking Requested - why for this release]: Regression
tracking-firefox56:
--- → ?
Comment 6•8 years ago
|
||
The video on https://www.wired.com/story/flight-rail-vectorr-atmospheric-railway-train overlaps the chrome as a black box during scrolling. I'm going to assume that that's also this bug.
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 8•8 years ago
|
||
Comment 9•8 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #8)
> Try push:
> https://treeherder.mozilla.org/#/
> jobs?repo=try&revision=bd8be33db1e07d8fcc2ebcb25b027bcc802fa6f0
FYI,
The try build fixes Bug 1373830 and Bug 1373528.
However, The try build does not fix Bug 1373479.
Comment 11•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8879741 [details]
Bug 1373335 - Make sure we clip the opaque region in render target coordinate space, since complex transforms mean that we can't always have a rectangular representation of clips in layer space.
https://reviewboard.mozilla.org/r/151084/#review156432
This is all so complicated... your patch looks plausible but I might have missed bugs.
::: gfx/layers/composite/LayerManagerComposite.cpp:386
(Diff revision 1)
> for (Layer* child = aLayer->GetLastChild(); child; child = child->GetPrevSibling()) {
> - PostProcessLayers(child, localOpaque, descendantsVisibleRegion, ancestorClipForChildren);
> + MOZ_ASSERT(aLayer->AsContainerLayer()->UseIntermediateSurface());
> + LayerComposite* childComposite = static_cast<LayerComposite*>(child->AsHostLayer());
> + PostProcessLayers(child, localOpaque, descendantsVisibleRegion,
> + ViewAs<RenderTargetPixel>(childComposite->GetShadowClipRect(),
> + PixelCastJustification::RenderTargetIsParentLayerForRoot),
not sure this PixelCastJustification completely matches what you're doing
Attachment #8879741 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 12•8 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #11)
> not sure this PixelCastJustification completely matches what you're doing
It doesn't really, the true reason is RenderTargetIsParentLayerIfParentLayerHasIntermediateSurface, but that doesn't exist, so I went for the closest :)
Comment 13•8 years ago
|
||
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e9c2da54cfed
Make sure we clip the opaque region in render target coordinate space, since complex transforms mean that we can't always have a rectangular representation of clips in layer space. r=mstange
Comment 14•8 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #12)
> (In reply to Markus Stange [:mstange] from comment #11)
>
> > not sure this PixelCastJustification completely matches what you're doing
>
> It doesn't really, the true reason is
> RenderTargetIsParentLayerIfParentLayerHasIntermediateSurface
Seems like it's worth adding :)
Comment 16•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Updated•8 years ago
|
| Reporter | ||
Comment 17•8 years ago
|
||
I'm marking this bug as VERIFIED, as issue was fixed, starting with Mozilla Firefox Nightly 56.0a1 (2017-06-23). Thanks.
Status: RESOLVED → VERIFIED
| Reporter | ||
Updated•8 years ago
|
QA Contact: Virtual
You need to log in
before you can comment on or make changes to this bug.
Description
•